syntax = "proto3";

package transactions;


service TransactionsService {
  rpc ProcessTransaction(ProcessTransactionRequest) returns (ProcessTransactionResponse);
}


message ProcessTransactionRequest {
  string authorizationTransactionId = 1;
  optional string clearingTransactionId = 2;
  string transactionCorrelationId = 3;
  string processorId = 4;
  string type = 5;
  string status = 6;
  double amount = 7;
  string currency = 8;
  string cardId = 9;
  string userId = 10;
  string metadata = 11;
  bool isSuccessful = 12;
}

message ProcessTransactionResponse {
  bool success = 1;
}

